--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Gamma functions'
 - !lcc 'QA'
+- GITenberg
 title: 'La Fonction Gamma: Théorie, Histoire, Bibliographie'
 url: http://www.gutenberg.org/ebooks/29800
